--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -24,12 +24,12 @@
             ],
             "styles": [
               "src/styles.css",    
-              "C:/Users/vanavil/Desktop/My Project/frontend/node_modules/bootstrap/dist/css/bootstrap.css",
-              "C:/Users/vanavil/Desktop/My Project/frontend/node_modules/font-awesome/css/font-awesome.css",
-              "C:/Users/vanavil/Desktop/My Project/frontend/node_modules/angular-instantsearch/bundles/instantsearch.min.css",
-              "C:/Users/vanavil/Desktop/My Project/frontend/node_modules/angular-instantsearch/bundles/instantsearch-theme-algolia.min.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "./node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/angular-instantsearch/bundles/instantsearch.min.css",
+              "./node_modules/angular-instantsearch/bundles/instantsearch-theme-algolia.min.css"
             ],
-            "scripts": ["C:/Users/vanavil/Desktop/My Project/frontend/node_modules/jquery/dist/jquery.js"
+            "scripts": ["./node_modules/jquery/dist/jquery.js"
             ]
           },
           "configurations": {
